--- a/style.css
+++ b/style.css
@@ -5,10 +5,8 @@
 }
 
 body {
-    /* background-image: url('https://images.unsplash.com/photo-1622547748225-3fc4abd2cca0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80'); */
-    /* background-image: url('https://unsplash.com/collections/1103088/one-color') */
     margin: 0;
-    width: 70%;
+    width: 100%;
     background-color: #bed3c3;
 }
 
@@ -38,7 +36,7 @@ body {
 .navContainer {
     display: flex;
     justify-content: center;
-    animation: bars 3s linear 1;
+    animation: bars 2s linear 1;
 }
 
 @keyframes bars {
@@ -59,13 +57,15 @@ body {
 }
 
 div.container-fluid {
-    width: 150px;
+    width: 170px;
     margin-top: 3em;
     margin-left: 1em;
     margin-right: 1.5em;
     padding: 0;
     border-bottom: 2px solid black; 
 }
+
+
 
 
 
@@ -78,6 +78,21 @@ h1 {
 .bi:active {
     transform: rotate(180deg);
 }
+
+.navContainer > .navbar > .container-fluid > .buttondiv > .navbar-toggler {
+    transition: font-size 0.2s;
+}
+
+.navContainer > .navbar > .container-fluid > .buttondiv > .navbar-toggler:hover {
+    background-color: transparent;
+    font-size: 1.4em;
+}
+
+.navContainer > .navbar > .container-fluid > .buttondiv > .navbar-toggler:focus,
+.navContainer > .navbar > .container-fluid > .buttondiv > .navbar-toggler:active {
+    box-shadow: none;
+}
+
 
 
 
@@ -148,28 +163,6 @@ svg {
     top: 100px;
 }
 
-.backgroundImage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-
-.backgroundImage::before {
-    content: '';
-    background-image: url('https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1347&q=80');
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    left: 0px;
-    bottom: 0px;
-    opacity: 0.8;
-    background-size: cover;
-    background-position: right;
-    z-index: -5;
-}
-
 @media only screen and (max-width: 667px) {
     body {
         font-size: 1em;
@@ -195,11 +188,6 @@ svg {
     nav.navbar {
         margin-left: 0px;
         margin-right: 0px
-    }
-
-    .backgroundImage::before {
-        background-size: auto 100%;
-        background-position: bottom 170px left 540px;
     }
 }
 
@@ -318,7 +306,8 @@ section#contact.displaynone {
 }
 
 #resume {
-    margin: 50px 70px;
+    justify-content: center;
+    margin: 50px auto;
     padding: 5px;
     width: 100%;
     max-width: 1500px;
